# rsfrac

./: .gitignore  Cargo.toml  README.md  ganglion.toml
.github/workflows/: pr_checks.yml  run_online.yml
assets/captures/Burning Ship/: Burning Ship 2.rsf  Burning Ship 3.rsf
assets/captures/Julia/: Julia 7.rsf
assets/captures/Mandelbrot/: Mandelbrot 5.rsf  Mandelbrot 6.rsf
docs/: pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/src/: arbitrary-precision.md  color-issues.md  color-palettes.md  contributing.md  creating-a-pull-request.md  fractal-logic.md  getting-started.md  gpu-mode.md  index.md  navigation.md  presentation.md  project-setup.md  recommended-ide-setup.md  render-settings.md  screenshots.md  taking-screenshots.md  the-command-system.md  the-logs-panel.md
src/: colors.rs  lib.rs  logging.rs  main.rs  stats.rs
src/app/: app_state.rs  build_chunks.rs  events.rs  fractal_logic.rs  logging.rs  main_loop.rs  mod.rs  parallel_jobs.rs  render_app.rs  render_canvas.rs  render_settings.rs  stats.rs
src/app_state/: click_modes.rs  default_app_state.rs  helpers.rs  hsl_settings.rs  mod.rs  state_loading.rs  stats.rs
src/colors/: mod.rs  palettes.rs
src/commands/: capture.rs  capture_fit.rs  capture_format.rs  capture_hq.rs  chunk_size.rs  clear.rs  click_mode.rs  color.rs  command_increment.rs  frac.rs  gpu.rs  gpu_info.rs  gpu_select.rs  help.rs  history.rs  load.rs  load_remote.rs  max_iter.rs  mod.rs  move_dist.rs  pause.rs  pos.rs  prec.rs  quit.rs  save.rs  smoothness.rs  stop.rs  timeout_detection.rs  version.rs  zoom_factor.rs
src/components/: canvas.rs  footer.rs  input.rs  log_panel.rs  mod.rs
src/components/canvas/: canvas.rs  canvas_component.rs  event_handling.rs  keyboard_handling.rs  mod.rs  mouse_handling.rs  render.rs  selectable_variables.rs
src/frac_logic/: canvas_coords.rs  fractal_logic.rs  gpu.rs  gpu_init.rs  gpu_render.rs  gpu_rendering_tracker.rs  gpu_util.rs  mod.rs  params_binding.rs  render_settings.rs  render_settings_methods.rs  wgpu_state.rs
src/frac_logic/shaders/: burning_ship.wgsl  julia.wgsl  mandelbrot.wgsl
src/fractals/: burning_ship.rs  julia.rs  mandelbrot.rs  mod.rs
src/fractals/shaders/: burning_ship.wgsl  julia.wgsl  mandelbrot.wgsl
src/helpers/: chunks.rs  focus.rs  increment_wrap.rs  markup.rs  mod.rs  saved_state.rs  vec2.rs  void_fills.rs  zoom_direction.rs
(+12 files in other folders)
