[package]
name = "rsfrac"
version = "1.1.3"
edition = "2021"
authors = ["Léopold Koprivnik <koprivnik@skwal.net>"]
description = "The Terminal-Based Fractal Explorer. Rsfrac is your terminal gateway to Mandelbrot, Burning Ship, and Julia."
documentation = "https://rsfrac.skwal.net/"
homepage = "https://rsfrac.skwal.net/"
repository = "https://github.com/SkwalExe/rsfrac"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["fractals", "terminal", "mandelbrot", "julia"]
categories = ["command-line-utilities", "visualization", "science", "rendering", "mathematics"]
include = [
    "/Cargo.toml",
    "/src/**/*.rs",
    "/src/**/*.wgsl",
    "/LICENSE",
    "/README.md"
]


[dependencies]
ansi_term = "0.12.1"
bytemuck = { version = "1.20.0", features = ["derive"] }
chrono = "0.4.38"
flume = "0.11.1"
futures = "0.3.31"
humantime = "2.1.0"
image = "0.25.4"
num-traits = "0.2.19"
rand = "0.8.5"
ratatui = { version = "0.28.1", features = ["all-widgets", "unstable-rendered-line-info"] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking"] }
rug = "1.26.1"
serde = { version = "1.0.215", features = ["derive"] }
strum = "0.26.3"
toml = "0.8.19"
tui-input = "0.10.1"
tui-markup = { version = "0.5.0", features = ["ratatui", "ansi"] }
tui-scrollview = "=0.4.1"
wgpu = "23.0.0"

[features]
web-runner = []
